--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,206 +4,204 @@
 $Button: 'Button';
 
 .#{$Button} {
-  background-color: red;
+  &:global  {
+    appearance: none;
+    background-color: $_button-background-color;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: $base-border-radius;
+    color: $white;
+    cursor: pointer;
+    display: inline-block;
+    font-family: $base-font-family;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 400;
+    line-height: 1;
+    padding: $small-spacing $base-spacing;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color $base-duration $base-timing, border-color $base-duration $base-timing, color $base-duration $base-timing, box-shadow $base-duration $base-timing;
+    user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
 
-  // &:global  {
-  //   appearance: none;
-  //   background-color: $_button-background-color;
-  //   border-width: 1px;
-  //   border-style: solid;
-  //   border-radius: $base-border-radius;
-  //   color: $white;
-  //   cursor: pointer;
-  //   display: inline-block;
-  //   font-family: $base-font-family;
-  //   font-size: 16px;
-  //   -webkit-font-smoothing: antialiased;
-  //   font-weight: 400;
-  //   line-height: 1;
-  //   padding: $small-spacing $base-spacing;
-  //   text-align: center;
-  //   text-decoration: none;
-  //   transition: background-color $base-duration $base-timing, border-color $base-duration $base-timing, color $base-duration $base-timing, box-shadow $base-duration $base-timing;
-  //   user-select: none;
-  //   vertical-align: middle;
-  //   white-space: nowrap;
+    &:hover {
+      background-color: $_button-background-color-hover;
+      // color: contrast-switch($_button-background-color-hover);
+    }
 
-  //   &:hover {
-  //     background-color: $_button-background-color-hover;
-  //     // color: contrast-switch($_button-background-color-hover);
-  //   }
+    &:focus {
+      outline: $focus-outline;
+      outline-offset: $focus-outline-offset;
+      box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    }
 
-  //   &:focus {
-  //     outline: $focus-outline;
-  //     outline-offset: $focus-outline-offset;
-  //     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-  //   }
-
-  //   &:disabled {
-  //     background-color: $color-disabled;
-  //     color: $color-cadet-blue;
-  //     cursor: not-allowed;
+    &:disabled {
+      background-color: $color-disabled;
+      color: $color-cadet-blue;
+      cursor: not-allowed;
 
 
-  //     &:hover {
-  //       background-color: $_button-background-color;
-  //     }
-  //   }
+      &:hover {
+        background-color: $_button-background-color;
+      }
+    }
 
-  //   //Size
-  //   &.is-full-width {
-  //     width: 100%;
-  //   }
+    //Size
+    &.is-full-width {
+      width: 100%;
+    }
 
-  //   &.is-size-small {
-  //     font-size: 10px;
-  //   }
+    &.is-size-small {
+      font-size: 10px;
+    }
 
-  //   &.is-size-medium {
-  //     font-size: 14px;
-  //   }
+    &.is-size-medium {
+      font-size: 14px;
+    }
 
-  //   &.is-size-large {
-  //     font-size: 16px;
-  //   }
+    &.is-size-large {
+      font-size: 16px;
+    }
 
-  //   //Contained
-  //   &.is-contained {
+    //Contained
+    &.is-contained {
 
-  //     //Color
-  //     &.is-danger {
-  //       border-color: $color-danger;
-  //       background-color: $color-danger;
+      //Color
+      &.is-danger {
+        border-color: $color-danger;
+        background-color: $color-danger;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint($color-danger, 12%);
-  //         border-color: tint($color-danger, 12%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint($color-danger, 12%);
+          border-color: tint($color-danger, 12%);
+        }
+      }
 
-  //     &.is-primary {
-  //       background-color: $color-primary;
-  //       border-color: $color-primary;
+      &.is-primary {
+        background-color: $color-primary;
+        border-color: $color-primary;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint($color-primary, 12%);
-  //         border-color: tint($color-primary, 12%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint($color-primary, 12%);
+          border-color: tint($color-primary, 12%);
+        }
+      }
 
-  //     &.is-success {
-  //       background-color: $color-success;
-  //       border-color: $color-success;
+      &.is-success {
+        background-color: $color-success;
+        border-color: $color-success;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint( $color-success, 12%);
-  //         border-color: tint( $color-success, 12%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint( $color-success, 12%);
+          border-color: tint( $color-success, 12%);
+        }
+      }
 
-  //     &.is-alert {
-  //       background-color: $color-alert;
-  //       border-color: $color-alert;
+      &.is-alert {
+        background-color: $color-alert;
+        border-color: $color-alert;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint( $color-alert, 12%);
-  //         border-color: tint( $color-alert, 12%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint( $color-alert, 12%);
+          border-color: tint( $color-alert, 12%);
+        }
+      }
 
-  //     &.is-default {
-  //       background-color: $color-default-1;
-  //       border-color: $color-default-1;
+      &.is-default {
+        background-color: $color-default-1;
+        border-color: $color-default-1;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint( $color-default-1, 45%);
-  //         border-color: tint( $color-default-1, 45%);
-  //       }
-  //     }
-  //   }
+        &:hover,
+        &:focus {
+          background-color: tint( $color-default-1, 45%);
+          border-color: tint( $color-default-1, 45%);
+        }
+      }
+    }
 
-  //   // outlined
-  //   &.is-outlined {
-  //     background-color: $white;
+    // outlined
+    &.is-outlined {
+      background-color: $white;
 
-  //     //Color
-  //     &.is-danger {
-  //       border-color: $color-danger;
-  //       color: $color-danger;
+      //Color
+      &.is-danger {
+        border-color: $color-danger;
+        color: $color-danger;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint($color-danger, 95%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint($color-danger, 95%);
+        }
+      }
 
-  //     &.is-primary {
-  //       border-color: $color-primary;
-  //       color: $color-primary;
+      &.is-primary {
+        border-color: $color-primary;
+        color: $color-primary;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint($color-primary, 95%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint($color-primary, 95%);
+        }
+      }
 
-  //     &.is-success {
-  //       border-color: $color-success;
-  //       color: $color-success;
+      &.is-success {
+        border-color: $color-success;
+        color: $color-success;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint($color-success, 95%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint($color-success, 95%);
+        }
+      }
 
-  //     &.is-alert {
-  //       border-color: $color-alert;
-  //       color: $color-alert;
+      &.is-alert {
+        border-color: $color-alert;
+        color: $color-alert;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint($color-alert, 95%);
-  //       }
-  //     }
+        &:hover,
+        &:focus {
+          background-color: tint($color-alert, 95%);
+        }
+      }
 
-  //     &.is-default {
-  //       background-color: $white;
-  //       border-color: $color-default;
-  //       color: $color-down-river;
+      &.is-default {
+        background-color: $white;
+        border-color: $color-default;
+        color: $color-down-river;
 
-  //       &:hover,
-  //       &:focus {
-  //         background-color: tint($color-down-river, 95%);
-  //       }
-  //     }
-  //   }
+        &:hover,
+        &:focus {
+          background-color: tint($color-down-river, 95%);
+        }
+      }
+    }
 
-  //   //Floating
-  //   &.is-float {
-  //     border-radius: 100px;
-  //   }
+    //Floating
+    &.is-float {
+      border-radius: 100px;
+    }
 
-  //   &.is-disabled.is-contained,
-  //   &.is-disabled.is-outlined,
-  //   &.is-disabled {
-  //     background-color: $color-disabled;
-  //     border-color: $color-unchecked;
-  //     cursor: not-allowed;
+    &.is-disabled.is-contained,
+    &.is-disabled.is-outlined,
+    &.is-disabled {
+      background-color: $color-disabled;
+      border-color: $color-unchecked;
+      cursor: not-allowed;
 
-  //     &:hover {
-  //       background-color: $color-disabled;
-  //       border-color: $color-unchecked;
-  //     }
+      &:hover {
+        background-color: $color-disabled;
+        border-color: $color-unchecked;
+      }
 
-  //     &:focus {
-  //       box-shadow: none;
-  //     }
-  //   }
-  // }
+      &:focus {
+        box-shadow: none;
+      }
+    }
+  }
 }
