--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,1 +1,4 @@
-@import "./Button/Button.scss";
+@import "./buttons/index.scss";
+@import "./forms/index.scss";
+@import "./inputs/index.scss";
+@import "./lists/index.scss";
