--- a/src/styles/layout/_variables.scss
+++ b/src/styles/layout/_variables.scss
@@ -30,7 +30,7 @@ $color-nile-blue: #182C4F;
 $color-unchecked: #C9CED6;
 
 
-$color-danger: #F03D3D;
+$color-warning: #F03D3D;
 $color-primary: #0C66FF;
 $color-alert: #FFAD0D;
 $color-success: #0BB07B;
