--- a/src/components/inputs/TextArea/TextArea.scss
+++ b/src/components/inputs/TextArea/TextArea.scss
@@ -16,7 +16,7 @@ $TextArea: 'TextArea';
     padding: 13px 16px;
     resize: none;
     transition: border-color $base-duration $base-timing, box-shadow $base-duration $base-timing;
-    width: 100%;
+    // width: 100%;
 
     &::placeholder {
       color: $color-cadet-blue;
@@ -51,10 +51,10 @@ $TextArea: 'TextArea';
     }
 
     &.is-invalid {
-      border-color: $color-danger;
+      border-color: $color-warning;
 
       &:focus {
-        box-shadow: 0px 0px 0px 1px $color-danger;
+        box-shadow: 0px 0px 0px 1px $color-warning;
       }
     }
 
