--- a/src/components/inputs/Checkbox/Checkbox.scss
+++ b/src/components/inputs/Checkbox/Checkbox.scss
@@ -17,7 +17,7 @@ $Checkbox: 'Checkbox';
   }
 
   &.is-disabled {
-    label {
+    .#{$Checkbox}__label {
       cursor: not-allowed;
     }
   }
@@ -33,7 +33,7 @@ $Checkbox: 'Checkbox';
   }
 
 
-  label {
+  &__label {
     cursor: pointer;
     font-size: 14px;
     line-height: 18px;
