[fix] text, tags component

--- a/src/components/inputs/index.scss
+++ b/src/components/inputs/index.scss
@@ -2,3 +2,4 @@
 @import "./Radio/Radio.scss";
 @import "./TextArea/TextArea.scss";
 @import "./TextField/TextField.scss";
+@import "./Tags/Tags.scss";
