--- a/src/styles/layout/_variables.scss
+++ b/src/styles/layout/_variables.scss
@@ -26,6 +26,12 @@ $color-link: #53627C;
 $color-denim: #0D55CF;
 $color-athens-grey: #F8F9FB;
 $color-nile-blue: #182C4F;
+// $color-riptide: #92ECCF;
+// $color-onahao: #CCE6FF;
+// $color-orange: #FFDC99;
+// $color-pink: #FFC2C2;
+// $color-green: #CFF8EB;
+// $color-deep-green: #00865A;
 
 $color-unchecked: #C9CED6;
 
