--- a/src/components/inputs/index.scss
+++ b/src/components/inputs/index.scss
@@ -3,3 +3,4 @@
 @import "./TextArea/TextArea.scss";
 @import "./TextField/TextField.scss";
 @import "./Tags/Tags.scss";
+@import "./Select/Select.scss";
